--- a/DashWallet/Wallofcoins/StoryBoard/buyDash.storyboard
+++ b/DashWallet/Wallofcoins/StoryBoard/buyDash.storyboard
@@ -534,10 +534,16 @@
                                                             <rect key="frame" x="15" y="0.0" width="384" height="113.5"/>
                                                             <subviews>
                                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_account_balance_black" translatesAutoresizingMaskIntoConstraints="NO" id="RJh-hJ-szA">
-                                                                    <rect key="frame" x="5" y="10" width="66" height="58.5"/>
+                                                                    <rect key="frame" x="5" y="10" width="51" height="51"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" secondItem="RJh-hJ-szA" secondAttribute="height" multiplier="1:1" id="6Qa-DM-Inv"/>
+                                                                    </constraints>
+                                                                </imageView>
+                                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_account_balance_black" translatesAutoresizingMaskIntoConstraints="NO" id="HVK-Bm-0bi">
+                                                                    <rect key="frame" x="5" y="61" width="51" height="51"/>
                                                                 </imageView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="D 5.296" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vha-Rc-84C">
-                                                                    <rect key="frame" x="81" y="10" width="198.5" height="21"/>
+                                                                    <rect key="frame" x="66" y="10" width="198.5" height="21"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" constant="21" id="NT7-Nu-5yK"/>
                                                                     </constraints>
@@ -546,7 +552,7 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="D 5.296" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tmj-Ru-eun">
-                                                                    <rect key="frame" x="81" y="30" width="198.5" height="18"/>
+                                                                    <rect key="frame" x="66" y="30" width="198.5" height="18"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" constant="18" id="vjk-3t-mSZ"/>
                                                                     </constraints>
@@ -555,7 +561,7 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bank of America" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rnf-dC-1XZ">
-                                                                    <rect key="frame" x="80.5" y="51" width="198.5" height="21"/>
+                                                                    <rect key="frame" x="65.5" y="51" width="198.5" height="21"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" constant="21" id="dCr-75-iFV"/>
                                                                     </constraints>
@@ -570,7 +576,7 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subject to local availability" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mJ7-qW-1nh">
-                                                                    <rect key="frame" x="80.5" y="71.5" width="132.5" height="37"/>
+                                                                    <rect key="frame" x="65.5" y="71.5" width="132.5" height="37"/>
                                                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -602,14 +608,13 @@
                                                             <constraints>
                                                                 <constraint firstItem="Ojl-6K-3k2" firstAttribute="top" secondItem="EnV-jE-hm5" secondAttribute="top" constant="10" id="0Te-1i-g9F"/>
                                                                 <constraint firstItem="Pdu-xK-0C0" firstAttribute="centerX" secondItem="Ojl-6K-3k2" secondAttribute="centerX" id="0cy-5U-smn"/>
-                                                                <constraint firstAttribute="bottom" secondItem="RJh-hJ-szA" secondAttribute="bottom" constant="45" id="2mW-47-Rh4"/>
                                                                 <constraint firstItem="tmj-Ru-eun" firstAttribute="width" secondItem="Vha-Rc-84C" secondAttribute="width" id="470-G3-TfP"/>
                                                                 <constraint firstItem="mJ7-qW-1nh" firstAttribute="leading" secondItem="Rnf-dC-1XZ" secondAttribute="leading" id="4AU-iw-BZM"/>
                                                                 <constraint firstItem="Rnf-dC-1XZ" firstAttribute="width" secondItem="Vha-Rc-84C" secondAttribute="width" id="7BB-JK-NgV"/>
                                                                 <constraint firstItem="Vha-Rc-84C" firstAttribute="leading" secondItem="RJh-hJ-szA" secondAttribute="trailing" constant="10" id="7vO-Q6-2gU"/>
                                                                 <constraint firstAttribute="trailing" secondItem="zCI-r8-N0O" secondAttribute="trailing" constant="8" id="CDy-6G-mzG"/>
-                                                                <constraint firstItem="RJh-hJ-szA" firstAttribute="width" secondItem="EnV-jE-hm5" secondAttribute="width" multiplier="50/290" id="CM4-9l-vgX"/>
                                                                 <constraint firstItem="Rnf-dC-1XZ" firstAttribute="leading" secondItem="RJh-hJ-szA" secondAttribute="trailing" constant="9.5" id="EOJ-DV-78U"/>
+                                                                <constraint firstItem="HVK-Bm-0bi" firstAttribute="width" secondItem="RJh-hJ-szA" secondAttribute="width" id="Eme-Wp-Tkp"/>
                                                                 <constraint firstItem="Pdu-xK-0C0" firstAttribute="centerY" secondItem="Rnf-dC-1XZ" secondAttribute="centerY" id="MJ4-ec-PAg"/>
                                                                 <constraint firstItem="Pdu-xK-0C0" firstAttribute="width" secondItem="Ojl-6K-3k2" secondAttribute="width" id="MWO-Oa-l4b"/>
                                                                 <constraint firstItem="RJh-hJ-szA" firstAttribute="top" secondItem="EnV-jE-hm5" secondAttribute="top" constant="10" id="P1i-1H-rRc"/>
@@ -619,13 +624,17 @@
                                                                 <constraint firstItem="Ojl-6K-3k2" firstAttribute="width" secondItem="EnV-jE-hm5" secondAttribute="width" multiplier="60/290" id="TuK-L3-gz9"/>
                                                                 <constraint firstItem="mJ7-qW-1nh" firstAttribute="width" secondItem="EnV-jE-hm5" secondAttribute="width" multiplier="100/290" id="Z3F-oU-Xpt"/>
                                                                 <constraint firstAttribute="bottom" secondItem="mJ7-qW-1nh" secondAttribute="bottom" constant="5" id="ZmT-lY-dKe"/>
+                                                                <constraint firstItem="RJh-hJ-szA" firstAttribute="height" secondItem="EnV-jE-hm5" secondAttribute="height" multiplier="0.45" id="dSR-wa-dMU"/>
                                                                 <constraint firstItem="tmj-Ru-eun" firstAttribute="leading" secondItem="RJh-hJ-szA" secondAttribute="trailing" constant="10" id="eLq-jm-Bqv"/>
                                                                 <constraint firstItem="Vha-Rc-84C" firstAttribute="top" secondItem="RJh-hJ-szA" secondAttribute="top" id="gAP-2u-xAq"/>
                                                                 <constraint firstItem="RJh-hJ-szA" firstAttribute="leading" secondItem="EnV-jE-hm5" secondAttribute="leading" constant="5" id="i4N-g3-gxc"/>
                                                                 <constraint firstItem="tmj-Ru-eun" firstAttribute="top" secondItem="Vha-Rc-84C" secondAttribute="bottom" constant="-1" id="lZW-ix-nRg"/>
+                                                                <constraint firstItem="HVK-Bm-0bi" firstAttribute="centerX" secondItem="RJh-hJ-szA" secondAttribute="centerX" id="m0a-D7-3sB"/>
                                                                 <constraint firstItem="zCI-r8-N0O" firstAttribute="width" secondItem="EnV-jE-hm5" secondAttribute="width" multiplier="110/290" id="nb1-a6-Y9m"/>
+                                                                <constraint firstItem="HVK-Bm-0bi" firstAttribute="top" secondItem="RJh-hJ-szA" secondAttribute="bottom" id="oAc-EJ-0VP"/>
                                                                 <constraint firstItem="Rnf-dC-1XZ" firstAttribute="top" secondItem="tmj-Ru-eun" secondAttribute="bottom" constant="3" id="ogb-EN-gb0"/>
                                                                 <constraint firstItem="mJ7-qW-1nh" firstAttribute="top" secondItem="Rnf-dC-1XZ" secondAttribute="bottom" constant="-1" id="prd-FO-yYo"/>
+                                                                <constraint firstItem="HVK-Bm-0bi" firstAttribute="height" secondItem="RJh-hJ-szA" secondAttribute="height" id="sQ6-N0-1e9"/>
                                                                 <constraint firstAttribute="trailing" secondItem="Ojl-6K-3k2" secondAttribute="trailing" constant="8" id="wUG-Rz-rzY"/>
                                                             </constraints>
                                                         </view>
@@ -649,6 +658,7 @@
                                                     <outlet property="lblDollar" destination="Pdu-xK-0C0" id="P7R-xl-oFf"/>
                                                     <outlet property="lblLocation" destination="mJ7-qW-1nh" id="Ymw-iJ-Yjn"/>
                                                     <outlet property="mainView" destination="EnV-jE-hm5" id="JdO-Z3-NDL"/>
+                                                    <outlet property="otherBankImgView" destination="HVK-Bm-0bi" id="puE-hp-BTP"/>
                                                 </connections>
                                             </tableViewCell>
                                         </prototypes>
