--- a/DashWallet/Wallofcoins/StoryBoard/wocSell.storyboard
+++ b/DashWallet/Wallofcoins/StoryBoard/wocSell.storyboard
@@ -85,7 +85,7 @@
                                         <rect key="frame" x="10.5" y="79.5" width="393" height="40.5"/>
                                         <color key="backgroundColor" red="0.21176470589999999" green="0.4823529412" blue="0.74509803919999995" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="15"/>
-                                        <state key="normal" title="SELL YOUR DASH">
+                                        <state key="normal" title="Sell Dash For Cash">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                         <connections>
@@ -1540,7 +1540,7 @@
                                         <inset key="imageEdgeInsets" minX="-20" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         <state key="normal" title="Buy Dash With Cash" image="ic_arrow_back_white"/>
                                         <connections>
-                                            <action selector="backBtnClicked:" destination="nMN-Rt-BhJ" eventType="touchUpInside" id="86R-uh-uAz"/>
+                                            <action selector="backToHomeScreenAction:" destination="nMN-Rt-BhJ" eventType="touchUpInside" id="6NQ-G8-IED"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -2308,13 +2308,13 @@ When you receive the code, input it below.</string>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="UVG-nV-kZQ">
                                         <rect key="frame" x="6.5" y="38" width="401" height="45.5"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <string key="text">You are already signed up with an app namedPIV Wallet (iOS).
+                                        <string key="text">You are already signed up with an app named Dash Wallet (iOS).
 Congratulations! Now type a secure password to continue.</string>
                                         <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="13"/>
                                         <color key="textColor" white="0.0" alpha="0.79888314260000004" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Verification Code" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ffm-Iy-8Gc">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ffm-Iy-8Gc">
                                         <rect key="frame" x="10.5" y="91.5" width="393" height="29"/>
                                         <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
